# google-adk-autonomous-agents-resolver

./: README.md  bot_test_file3.txt  privacy.html  terms.html
test_app_fastapi/: main.py  pyproject.toml  schemas.py
test_app_fastapi/tests/: test_main.py
